@@ -1,5 +1,6 @@
 Version 1.1
 * Added incrementVDIFHeader
+* vsum: error message -> stderr, not stdout
 
 Version 1.0
 ~~~~~~~~~~~
